# reflex-arena-srv-docker

./: .gitignore  README.md  dedicatedserver.cfg  docker-compose.example.yml  docker-compose.yml  update_reflexded.sh
_internal/replay_service/backend/: README.md  pyproject.toml
_internal/replay_service/backend/src/: cleaner.py  db.py  main.py  model.py  parser.py
_internal/replay_service/backend/tests/: conftest.py  test_parser.py  test_replay_compression.py  test_replay_db.py
_internal/replay_service/backend/tests/assets/: Aerowalk_Ivan_O__Ch4mp_03Dec2025_175239_0markers.rep  Aerowalk_Ivan_O__ideationm_26Nov2025_155309_0markers.rep  Aerowalk_Ivan_O__promeus_22Nov2025_172953_0markers.rep  Simplicity_Ivan_O__Vigur_26Nov2025_163013_0markers.rep
_internal/replay_service/backend/tests/assets/dbs/aerowalk/: chunk_0_0de5205caf1d.json  chunk_1_86688829b646.json  chunk_2_5d7507fb53e0.json  replays_header.json
_internal/replay_service/backend/tests/assets/replays/: Aerowalk_Celz_Ch4mp_04Dec2025_131803_0markers.rep  Aerowalk_Celz_Ivan_O__05Dec2025_094040_0markers.rep  Aerowalk_Celz_ideationm_04Dec2025_083858_1markers.rep  Aerowalk_Ivan_O__Vigur_24Nov2025_183934_0markers.rep  Pocket_Infinity_Vigur_Ivan_O__05Jan2026_161301_0markers.rep  Simplicity_Ivan_O__Vigur_03Dec2025_194603_0markers.rep  Simplicity_Jaguar_Luft_08Dec2025_201914_0markers.rep  The_Purple_Catalyst_fuggywuggy_luny_25Dec2025_194521_0markers.rep
_internal/replay_service/src/: .gitignore  main.py  model.py  parser.py  pyproject.toml  replay_parser.py
docker/: Dockerfile  cleaner.Dockerfile  nginx.conf  (+7 more)
(+54 files in other folders)
