[project]
name = "replay-service"
version = "0.1.0"
description = "Reflex Arena replay service: parsing to json, compressing, deleting old."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "construct>=2.10.70",
    "construct-typing>=0.7.0",
    "inotify-simple>=2.0.1",
    "sortedcontainers>=2.4.0",
    "sortedcontainers-stubs>=2.4.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest>=9.0.2",
]
